Fix toolbar overlap on charts

--- a/css/chata-styles.css
+++ b/css/chata-styles.css
@@ -919,7 +919,7 @@ tr td.chata-hidden{
     display: none;
     position: absolute;
     background: var(--autoql-vanilla-background-color-primary);
-    top: -22px;
+    top: -31px;
     padding: 5px;
     border-radius: 6px;
     line-height: 28px;
